Fix overflow blocking tooltip

--- a/app/assets/stylesheets/modules/anime-page.css.scss
+++ b/app/assets/stylesheets/modules/anime-page.css.scss
@@ -213,7 +213,6 @@ h4.series-title {
   background: #fff;
   border-left: 1px solid #ddd;
   border-top-right-radius: 4px;
-  overflow: hidden;
   @media (min-width: 768px) {
     min-height: 1000px;
   }
